syntax = "proto2";

import "addressbook/addressbook.proto";

option java_multiple_files = true;
option java_package = "example.protobuf.service";
option java_outer_classname = "SearchServiceProtos";
option java_generic_services = true;

message SearchById {
  optional int32 id = 2;
}

service SearchService {
  rpc searchPerson(SearchById) returns (addressbook.Person);
}